src/sddekit.h


uint32_t sd_ver_major();
uint32_t sd_ver_minor();
typedef enum sd_stat {
	SD_OK,
	SD_ERR,
	SD_CONT,
	SD_STOP
} sd_stat;
SD_API sd_stat 
sd_util_read_square_matrix(const char *fname, uint32_t *n, double **w);
SD_API sd_stat 
sd_util_uniqi(uint32_t n,
	      uint32_t * restrict ints, 
	      uint32_t * restrict nuniq, 
	      uint32_t **uints);
typedef struct sd_rng sd_rng;
struct sd_rng {
	void *ptr;
	void (*seed)(sd_rng*, uint32_t seed);
	double (*norm)(sd_rng*);
	void (*fill_norm)(sd_rng*, uint32_t n, double *x);
	uint32_t (*nbytes)(sd_rng*);
	void (*free)(sd_rng*);
};
SD_API void sd_rng_seed(sd_rng*, uint32_t seed);
SD_API double sd_rng_norm(sd_rng*);
SD_API void sd_rng_fill_norm(sd_rng*, uint32_t n, double *x);
SD_API uint32_t sd_rng_nbytes(sd_rng*);
SD_API void sd_rng_free(sd_rng*);
SD_API sd_rng *
sd_rng_new_default();
typedef struct sd_hfill sd_hfill;
struct sd_hfill {
	void *ptr;
	sd_stat (*apply)(sd_hfill*, uint32_t n, double * restrict t, uint32_t *indices,
		double * restrict buf);
	void (*free)(sd_hfill*);
};
SD_API sd_stat sd_hfill_apply(sd_hfill*, uint32_t n, double * restrict t, uint32_t *indices,
		double * restrict buf);
void sd_hfill_free(sd_hfill*);
SD_API sd_hfill *
sd_hfill_new_val(double val);
typedef struct sd_hist sd_hist;
struct sd_hist {
	void *ptr;
	uint32_t(*get_maxvi)(sd_hist*);
	uint32_t(*get_vi2i)(sd_hist*, uint32_t vi);
	uint32_t(*get_nu)(sd_hist *h);
	void (*free)(sd_hist *h);
	sd_stat (*fill)(sd_hist *h, sd_hfill *filler);
	void (*get)(sd_hist *h, double t, double *aff);
	void (*set)(sd_hist *h, double t, double *eff);
	uint32_t (*nbytes)(sd_hist *h);
	double (*get_buf_lin)(sd_hist *h, uint32_t index);
	uint32_t (*get_nd)(sd_hist *h);
	double (*get_t)(sd_hist *h);
	double (*get_dt)(sd_hist *h);
	uint32_t (*get_lim)(sd_hist *h, uint32_t i);
	uint32_t (*get_len)(sd_hist *h, uint32_t i);
	uint32_t (*get_pos)(sd_hist *h, uint32_t i);
	uint32_t (*get_uvi)(sd_hist *h, uint32_t i);
	double (*get_maxd)(sd_hist *h, uint32_t i);
	uint32_t (*get_vi)(sd_hist *h, uint32_t i);
	double (*get_vd)(sd_hist *h, uint32_t i);
	bool (*buf_is_null)(sd_hist *h);
};
SD_API sd_hist *
sd_hist_new_default(uint32_t nd, uint32_t *vi, 
		    double *vd, double t0, double dt);
typedef void*(*sd_malloc_t)(size_t size);
typedef void*(*sd_realloc_t)(void *ptr, size_t size);
typedef void(*sd_free_t)(void *ptr);
SD_API void
sd_malloc_set_allocators(sd_malloc_t malloc, sd_realloc_t realloc, sd_free_t free);
SD_API void
sd_malloc_set_stdlib_allocators();
SD_API void *
sd_malloc(size_t size);
SD_API void *
sd_realloc(void *ptr, size_t size);
SD_API void
sd_free(void *ptr);
typedef struct sd_sys_in { 
	uint32_t nx, nc, id;
	double t, *x, *i; 
	sd_hist *hist;
	sd_rng *rng;
} sd_sys_in;
typedef struct sd_sys_out { 
	double *f, *g, *o; 
} sd_sys_out;
typedef struct sd_sys sd_sys;
struct sd_sys {
	uint32_t (*ndim)(sd_sys*);
	uint32_t (*ndc)(sd_sys*);
	uint32_t (*nobs)(sd_sys*);
	uint32_t (*nrpar)(sd_sys*);
	uint32_t (*nipar)(sd_sys*);
	sd_stat (*apply)(sd_sys*, sd_sys_in*, sd_sys_out*);
	void (*free)(sd_sys*);
	void *ptr;
};
SD_API sd_sys *
sd_sys_new_cb(uint32_t ndim, uint32_t ndc, uint32_t nobs, 
	uint32_t nrpar, uint32_t nipar,
	void *user_data,
	sd_stat (*user_apply)(void *, sd_sys_in*, sd_sys_out*));
typedef struct sd_out sd_out;
struct sd_out {
	void *ptr;
	void (*free)(sd_out *);
	sd_stat (*apply)(sd_out *, double t, 
			     uint32_t nx, double * restrict x,
			     uint32_t nc, double * restrict c);
};
SD_API sd_out *
sd_out_new_cb(void *user_data,
	sd_stat (*user_apply)(void *, double t, 
	     uint32_t nx, double * restrict x,
	     uint32_t nc, double * restrict c));
typedef struct sd_sch sd_sch;
struct sd_sch {
	void *ptr;
	uint32_t (*get_nx)(sd_sch *);
	sd_stat (*apply)(sd_sch *, sd_hist *, sd_rng *, sd_sys *,
		double t, double dt, 
		uint32_t nx, double * restrict x,
		uint32_t nc, double * restrict c);
	void (*free)(sd_sch *);
};
SD_API sd_sch *
sd_sch_new_cb(uint32_t nx, void *user_data,
	sd_stat (*user_apply)(void *, sd_hist *, sd_rng *, sd_sys *,
		double t, double dt, 
		uint32_t nx, double * restrict x,
		uint32_t nc, double * restrict c)
	);