python/_sddekit.py


struct__IO_FILE.__slots__ = [
    '_flags',
    '_IO_read_ptr',
    '_IO_read_end',
    '_IO_read_base',
    '_IO_write_base',
    '_IO_write_ptr',
    '_IO_write_end',
    '_IO_buf_base',
    '_IO_buf_end',
    '_IO_save_base',
    '_IO_backup_base',
    '_IO_save_end',
    '_markers',
    '_chain',
    '_fileno',
    '_flags2',
    '_old_offset',
    '_cur_column',
    '_vtable_offset',
    '_shortbuf',
    '_lock',
    '_offset',
    '__pad1',
    '__pad2',
    '__pad3',
    '__pad4',
    '__pad5',
    '_mode',
    '_unused2',
]
struct__IO_FILE._fields_ = [
    ('_flags', c_int),
    ('_IO_read_ptr', String),
    ('_IO_read_end', String),
    ('_IO_read_base', String),
    ('_IO_write_base', String),
    ('_IO_write_ptr', String),
    ('_IO_write_end', String),
    ('_IO_buf_base', String),
    ('_IO_buf_end', String),
    ('_IO_save_base', String),
    ('_IO_backup_base', String),
    ('_IO_save_end', String),
    ('_markers', POINTER(struct__IO_marker)),
    ('_chain', POINTER(struct__IO_FILE)),
    ('_fileno', c_int),
    ('_flags2', c_int),
    ('_old_offset', __off_t),
    ('_cur_column', c_ushort),
    ('_vtable_offset', c_char),
    ('_shortbuf', c_char * 1),
    ('_lock', POINTER(_IO_lock_t)),
    ('_offset', __off64_t),
    ('__pad1', POINTER(None)),
    ('__pad2', POINTER(None)),
    ('__pad3', POINTER(None)),
    ('__pad4', POINTER(None)),
    ('__pad5', c_size_t),
    ('_mode', c_int),
    ('_unused2', c_char * (((15 * sizeof(c_int)) - (4 * sizeof(POINTER(None)))) - sizeof(c_size_t))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 55
if hasattr(_libs['SDDEKit'], 'sd_ver_major'):
    sd_ver_major = _libs['SDDEKit'].sd_ver_major
    sd_ver_major.argtypes = []
    sd_ver_major.restype = c_uint32

# /home/mw/dev/sddekit/src/sddekit.h: 56
if hasattr(_libs['SDDEKit'], 'sd_ver_minor'):
    sd_ver_minor = _libs['SDDEKit'].sd_ver_minor
    sd_ver_minor.argtypes = []
    sd_ver_minor.restype = c_uint32

enum_sd_stat = c_int # /home/mw/dev/sddekit/src/sddekit.h: 70

SD_OK = 0 # /home/mw/dev/sddekit/src/sddekit.h: 70

SD_ERR = (SD_OK + 1) # /home/mw/dev/sddekit/src/sddekit.h: 70

SD_CONT = (SD_ERR + 1) # /home/mw/dev/sddekit/src/sddekit.h: 70

SD_STOP = (SD_CONT + 1) # /home/mw/dev/sddekit/src/sddekit.h: 70

sd_stat = enum_sd_stat # /home/mw/dev/sddekit/src/sddekit.h: 70

# /home/mw/dev/sddekit/src/sddekit.h: 83
if hasattr(_libs['SDDEKit'], 'sd_util_read_square_matrix'):
    sd_util_read_square_matrix = _libs['SDDEKit'].sd_util_read_square_matrix
    sd_util_read_square_matrix.argtypes = [String, POINTER(c_uint32), POINTER(POINTER(c_double))]
    sd_util_read_square_matrix.restype = sd_stat

# /home/mw/dev/sddekit/src/sddekit.h: 95
if hasattr(_libs['SDDEKit'], 'sd_util_uniqi'):
    sd_util_uniqi = _libs['SDDEKit'].sd_util_uniqi
    sd_util_uniqi.argtypes = [c_uint32, POINTER(c_uint32), POINTER(c_uint32), POINTER(POINTER(c_uint32))]
    sd_util_uniqi.restype = sd_stat

# /home/mw/dev/sddekit/src/sddekit.h: 112
class struct_sd_rng(Structure):
    pass

sd_rng = struct_sd_rng # /home/mw/dev/sddekit/src/sddekit.h: 105

struct_sd_rng.__slots__ = [
    'ptr',
    'seed',
    'norm',
    'fill_norm',
    'nbytes',
    'free',
]
struct_sd_rng._fields_ = [
    ('ptr', POINTER(None)),
    ('seed', CFUNCTYPE(UNCHECKED(None), POINTER(sd_rng), c_uint32)),
    ('norm', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_rng))),
    ('fill_norm', CFUNCTYPE(UNCHECKED(None), POINTER(sd_rng), c_uint32, POINTER(c_double))),
    ('nbytes', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_rng))),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_rng))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 137
if hasattr(_libs['SDDEKit'], 'sd_rng_seed'):
    sd_rng_seed = _libs['SDDEKit'].sd_rng_seed
    sd_rng_seed.argtypes = [POINTER(sd_rng), c_uint32]
    sd_rng_seed.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 138
if hasattr(_libs['SDDEKit'], 'sd_rng_norm'):
    sd_rng_norm = _libs['SDDEKit'].sd_rng_norm
    sd_rng_norm.argtypes = [POINTER(sd_rng)]
    sd_rng_norm.restype = c_double

# /home/mw/dev/sddekit/src/sddekit.h: 139
if hasattr(_libs['SDDEKit'], 'sd_rng_fill_norm'):
    sd_rng_fill_norm = _libs['SDDEKit'].sd_rng_fill_norm
    sd_rng_fill_norm.argtypes = [POINTER(sd_rng), c_uint32, POINTER(c_double)]
    sd_rng_fill_norm.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 140
if hasattr(_libs['SDDEKit'], 'sd_rng_nbytes'):
    sd_rng_nbytes = _libs['SDDEKit'].sd_rng_nbytes
    sd_rng_nbytes.argtypes = [POINTER(sd_rng)]
    sd_rng_nbytes.restype = c_uint32

# /home/mw/dev/sddekit/src/sddekit.h: 141
if hasattr(_libs['SDDEKit'], 'sd_rng_free'):
    sd_rng_free = _libs['SDDEKit'].sd_rng_free
    sd_rng_free.argtypes = [POINTER(sd_rng)]
    sd_rng_free.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 146
if hasattr(_libs['SDDEKit'], 'sd_rng_new_default'):
    sd_rng_new_default = _libs['SDDEKit'].sd_rng_new_default
    sd_rng_new_default.argtypes = []
    sd_rng_new_default.restype = POINTER(sd_rng)

# /home/mw/dev/sddekit/src/sddekit.h: 159
class struct_sd_hfill(Structure):
    pass

sd_hfill = struct_sd_hfill # /home/mw/dev/sddekit/src/sddekit.h: 154

struct_sd_hfill.__slots__ = [
    'ptr',
    'apply',
    'free',
]
struct_sd_hfill._fields_ = [
    ('ptr', POINTER(None)),
    ('apply', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_hfill), c_uint32, POINTER(c_double), POINTER(c_uint32), POINTER(c_double))),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_hfill))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 180
if hasattr(_libs['SDDEKit'], 'sd_hfill_apply'):
    sd_hfill_apply = _libs['SDDEKit'].sd_hfill_apply
    sd_hfill_apply.argtypes = [POINTER(sd_hfill), c_uint32, POINTER(c_double), POINTER(c_uint32), POINTER(c_double)]
    sd_hfill_apply.restype = sd_stat

# /home/mw/dev/sddekit/src/sddekit.h: 182
if hasattr(_libs['SDDEKit'], 'sd_hfill_free'):
    sd_hfill_free = _libs['SDDEKit'].sd_hfill_free
    sd_hfill_free.argtypes = [POINTER(sd_hfill)]
    sd_hfill_free.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 187
if hasattr(_libs['SDDEKit'], 'sd_hfill_new_val'):
    sd_hfill_new_val = _libs['SDDEKit'].sd_hfill_new_val
    sd_hfill_new_val.argtypes = [c_double]
    sd_hfill_new_val.restype = POINTER(sd_hfill)

# /home/mw/dev/sddekit/src/sddekit.h: 197
class struct_sd_hist(Structure):
    pass

sd_hist = struct_sd_hist # /home/mw/dev/sddekit/src/sddekit.h: 195

struct_sd_hist.__slots__ = [
    'ptr',
    'get_maxvi',
    'get_vi2i',
    'get_nu',
    'free',
    'fill',
    'get',
    'set',
    'nbytes',
    'get_buf_lin',
    'get_nd',
    'get_t',
    'get_dt',
    'get_lim',
    'get_len',
    'get_pos',
    'get_uvi',
    'get_maxd',
    'get_vi',
    'get_vd',
    'buf_is_null',
]
struct_sd_hist._fields_ = [
    ('ptr', POINTER(None)),
    ('get_maxvi', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist))),
    ('get_vi2i', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist), c_uint32)),
    ('get_nu', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist))),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_hist))),
    ('fill', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_hist), POINTER(sd_hfill))),
    ('get', CFUNCTYPE(UNCHECKED(None), POINTER(sd_hist), c_double, POINTER(c_double))),
    ('set', CFUNCTYPE(UNCHECKED(None), POINTER(sd_hist), c_double, POINTER(c_double))),
    ('nbytes', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist))),
    ('get_buf_lin', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_hist), c_uint32)),
    ('get_nd', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist))),
    ('get_t', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_hist))),
    ('get_dt', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_hist))),
    ('get_lim', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist), c_uint32)),
    ('get_len', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist), c_uint32)),
    ('get_pos', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist), c_uint32)),
    ('get_uvi', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist), c_uint32)),
    ('get_maxd', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_hist), c_uint32)),
    ('get_vi', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_hist), c_uint32)),
    ('get_vd', CFUNCTYPE(UNCHECKED(c_double), POINTER(sd_hist), c_uint32)),
    ('buf_is_null', CFUNCTYPE(UNCHECKED(c_bool), POINTER(sd_hist))),
]

# /home/mw/dev/sddekit/src/sddekit.h: 374
if hasattr(_libs['SDDEKit'], 'sd_hist_new_default'):
    sd_hist_new_default = _libs['SDDEKit'].sd_hist_new_default
    sd_hist_new_default.argtypes = [c_uint32, POINTER(c_uint32), POINTER(c_double), c_double, c_double]
    sd_hist_new_default.restype = POINTER(sd_hist)

sd_malloc_t = CFUNCTYPE(UNCHECKED(POINTER(None)), c_size_t) # /home/mw/dev/sddekit/src/sddekit.h: 382

sd_realloc_t = CFUNCTYPE(UNCHECKED(POINTER(None)), POINTER(None), c_size_t) # /home/mw/dev/sddekit/src/sddekit.h: 383

sd_free_t = CFUNCTYPE(UNCHECKED(None), POINTER(None)) # /home/mw/dev/sddekit/src/sddekit.h: 384

# /home/mw/dev/sddekit/src/sddekit.h: 391
if hasattr(_libs['SDDEKit'], 'sd_malloc_set_allocators'):
    sd_malloc_set_allocators = _libs['SDDEKit'].sd_malloc_set_allocators
    sd_malloc_set_allocators.argtypes = [sd_malloc_t, sd_realloc_t, sd_free_t]
    sd_malloc_set_allocators.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 397
if hasattr(_libs['SDDEKit'], 'sd_malloc_set_stdlib_allocators'):
    sd_malloc_set_stdlib_allocators = _libs['SDDEKit'].sd_malloc_set_stdlib_allocators
    sd_malloc_set_stdlib_allocators.argtypes = []
    sd_malloc_set_stdlib_allocators.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 402
if hasattr(_libs['SDDEKit'], 'sd_malloc'):
    sd_malloc = _libs['SDDEKit'].sd_malloc
    sd_malloc.argtypes = [c_size_t]
    sd_malloc.restype = POINTER(None)

# /home/mw/dev/sddekit/src/sddekit.h: 408
if hasattr(_libs['SDDEKit'], 'sd_realloc'):
    sd_realloc = _libs['SDDEKit'].sd_realloc
    sd_realloc.argtypes = [POINTER(None), c_size_t]
    sd_realloc.restype = POINTER(None)

# /home/mw/dev/sddekit/src/sddekit.h: 415
if hasattr(_libs['SDDEKit'], 'sd_free'):
    sd_free = _libs['SDDEKit'].sd_free
    sd_free.argtypes = [POINTER(None)]
    sd_free.restype = None

# /home/mw/dev/sddekit/src/sddekit.h: 458
class struct_sd_sys_in(Structure):
    pass

struct_sd_sys_in.__slots__ = [
    'nx',
    'nc',
    'id',
    't',
    'x',
    'i',
    'hist',
    'rng',
]
struct_sd_sys_in._fields_ = [
    ('nx', c_uint32),
    ('nc', c_uint32),
    ('id', c_uint32),
    ('t', c_double),
    ('x', POINTER(c_double)),
    ('i', POINTER(c_double)),
    ('hist', POINTER(sd_hist)),
    ('rng', POINTER(sd_rng)),
]

sd_sys_in = struct_sd_sys_in # /home/mw/dev/sddekit/src/sddekit.h: 458

# /home/mw/dev/sddekit/src/sddekit.h: 462
class struct_sd_sys_out(Structure):
    pass

struct_sd_sys_out.__slots__ = [
    'f',
    'g',
    'o',
]
struct_sd_sys_out._fields_ = [
    ('f', POINTER(c_double)),
    ('g', POINTER(c_double)),
    ('o', POINTER(c_double)),
]

sd_sys_out = struct_sd_sys_out # /home/mw/dev/sddekit/src/sddekit.h: 462

# /home/mw/dev/sddekit/src/sddekit.h: 470
class struct_sd_sys(Structure):
    pass

sd_sys = struct_sd_sys # /home/mw/dev/sddekit/src/sddekit.h: 465

struct_sd_sys.__slots__ = [
    'ndim',
    'ndc',
    'nobs',
    'nrpar',
    'nipar',
    'apply',
    'free',
    'ptr',
]
struct_sd_sys._fields_ = [
    ('ndim', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sys))),
    ('ndc', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sys))),
    ('nobs', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sys))),
    ('nrpar', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sys))),
    ('nipar', CFUNCTYPE(UNCHECKED(c_uint32), POINTER(sd_sys))),
    ('apply', CFUNCTYPE(UNCHECKED(sd_stat), POINTER(sd_sys), POINTER(sd_sys_in), POINTER(sd_sys_out))),
    ('free', CFUNCTYPE(UNCHECKED(None), POINTER(sd_sys))),
    ('ptr', POINTER(None)),
]
